Day3 part2 done