@@ -1,5 +1,8 @@
 package hearc.ig.day3;
 
+import org.apache.log4j.LogManager;
+import org.apache.log4j.Logger;
+
 import java.io.File;
 import java.io.FileNotFoundException;
 import java.util.ArrayList;
@@ -7,8 +10,12 @@ import java.util.List;
 import java.util.Scanner;
 import java.util.stream.Collectors;
 
+
 public class Day3 {
+    private static final Logger logger = LogManager.getLogger(Day3.class);
     private ArrayList<String> sacs = new ArrayList<>();
+    private List<List<String>> groups = new ArrayList<>();
+    private ArrayList<Character> itemByGroup = new ArrayList<>();
     private ArrayList<Character> itemsIdentiques = new ArrayList<>();
     public Integer resolvePuzzlePart1() {
         //create an arrayList, split by \n ok
@@ -24,10 +31,43 @@ public class Day3 {
         }
         return caclulateSum(itemsIdentiques);
     }
+    public Integer resolvePuzzlePart2(){
+        groups = divideByGroups(sacs);
+        for (List<String> groupe :groups) {
+            itemByGroup.add(compareGroup(groupe));
+        }
 
+        return caclulateSum(itemByGroup);
+    }
+
+    private Character compareGroup(List<String> groupe) {
+        Character result = null;
+        List<Character> elf1 = groupe.get(0).chars().mapToObj(c -> (char) c).collect(Collectors.toList());
+        List<Character> elf2 = groupe.get(1).chars().mapToObj(c -> (char) c).collect(Collectors.toList());
+        List<Character> elf3 = groupe.get(2).chars().mapToObj(c -> (char) c).collect(Collectors.toList());
+
+        elf1.retainAll(elf2);
+        elf1.retainAll(elf3);
+
+        for (Character c:elf1) {
+            if(c != null){
+                result = c;
+            }
+        }
+        return result;
+    }
+
+    private List<List<String>> divideByGroups(ArrayList<String> sacs) {
+        List<List<String>> elfGroups = new ArrayList<>();
+        for (int i = 0; i < sacs.size(); i += 3) {
+            int end = Math.min(i + 3, sacs.size());
+            List<String> group = sacs.subList(i, end);
+            elfGroups.add(group);
+        }
+        return elfGroups;
+    }
 
     private Integer caclulateSum(ArrayList<Character> itemsIdentiques) {
-        int sum = 0;
         List<Integer> intList = itemsIdentiques.stream().map(c -> {
             if (c >= 'a' && c <= 'z') {
                 return c - 'a' + 1;
@@ -36,7 +76,7 @@ public class Day3 {
             } else {
                 return null;
             }
-        }).collect(Collectors.toList());
+        }).toList();
 
         return intList.stream().reduce(0, Integer::sum);
     }
@@ -66,7 +106,8 @@ public class Day3 {
             scanner.close();
 
         } catch (FileNotFoundException e) {
-            System.out.println("Le fichier n'a pas été trouvé.");
+
+            logger.info("Le fichier n'a pas été trouvé.");
             e.printStackTrace();
         }
         return sacs;
